--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 PORT=5000
-MONGODB_CONNECTION="mongodb+srv://pmdnawaz1:Yarasool12@cluster0.vbrmysz.mongodb.net/?retryWrites=true&w=majority"
+MONGODB_CONNECTION="mongodb+srv://vaizmehmoodi:oRfxinJmGzqbUWfd@cluster0.rgljqzx.mongodb.net/?retryWrites=true&w=majority"
 JWTKEY="MERN"
-EMAIL="pmdnawaz1@gmail.com"
-EMAIL_PASSWORD="gtcvwkgtdjkkpitm"
+EMAIL="vaizmehmoodi@gmail.com"
+EMAIL_PASSWORD="oRfxinJmGzqbUWfd"
 BASE_URL="https://localhost:5000"
