--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 PORT=5000
-MONGODB_CONNECTION="mongodb+srv://vaizmehmoodi:oRfxinJmGzqbUWfd@cluster0.rgljqzx.mongodb.net/?retryWrites=true&w=majority"
+MONGODB_CONNECTION="mongodb+srv://vaizmehmoodi:9nCXyXVWNdrDFI6d@cluster0.rgljqzx.mongodb.net/SMDB?retryWrites=true&w=majority"
 JWTKEY="MERN"
 EMAIL="vaizmehmoodi@gmail.com"
 EMAIL_PASSWORD="oRfxinJmGzqbUWfd"
