--- a/server/.env
+++ b/server/.env
@@ -3,4 +3,4 @@ MONGODB_CONNECTION="mongodb+srv://vaizmehmoodi:9nCXyXVWNdrDFI6d@cluster0.rgljqzx
 JWTKEY="MERN"
 EMAIL="vaizmehmoodi@gmail.com"
 EMAIL_PASSWORD="oRfxinJmGzqbUWfd"
-BASE_URL="https://localhost:5000"
+BASE_URL="https://sm-c6trkhufb-syed-vaizs-projects.vercel.app/"
